--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "moment": "^2.15.2",
+    "shelljs": "^0.7.5",
     "underscore": "^1.8.3",
     "wxr": "^0.1.2"
   }
